<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inbox"
            android:checked="false"
            android:icon="@drawable/ic_money"
            android:title="@string/home" />

        <item
            android:id="@+id/trash"
            android:checked="false"
            android:icon="@drawable/ic_prenomina"
            android:title="@string/prenomina" />

        <item
            android:id="@+id/starred"
            android:checked="false"
            android:icon="@drawable/save_money"
            android:title="@string/ahorro" />

        <item
            android:id="@+id/sent_mail"
            android:checked="false"
            android:icon="@drawable/ic_prestamo"
            android:title="@string/prestamo" />

        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:icon="@drawable/ic_comedor"
            android:title="@string/comedor" />


        <item
            android:id="@+id/allmail"
            android:checked="false"
            android:icon="@drawable/ic_identificacion"
            android:title="@string/identificacion" />

    </group>
</menu>