<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rh_synergy.kiosco.AhorroActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlEncabezado"
        android:layout_below="@+id/tool_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ahorInicio"
            android:id="@+id/lblInicio"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="11/Septiembre/2016"
            android:id="@+id/txtAhorFec"
            android:layout_above="@+id/lblRetPer"
            android:layout_toRightOf="@+id/lblInicio"
            android:layout_toEndOf="@+id/lblInicio"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ahorRetiro"
            android:id="@+id/lblRetiro"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/lblAhrTotal"
            android:layout_alignEnd="@+id/lblAhrTotal"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="$500.00"
            android:id="@+id/txtAhorReti"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="$2,000.00"
            android:id="@+id/txtAhorDescPer"
            android:layout_below="@+id/txtAhorFec"
            android:layout_toRightOf="@+id/lblRetPer"
            android:layout_toEndOf="@+id/lblRetPer"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ahorRetPer"
            android:id="@+id/lblRetPer"
            android:layout_below="@+id/lblInicio"
            android:layout_alignLeft="@+id/lblInicio"
            android:layout_alignStart="@+id/lblInicio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="$110,900.00"
            android:id="@+id/txtAhorTotal"
            android:layout_below="@+id/lblRetiro"
            android:layout_alignRight="@+id/txtAhorReti"
            android:layout_alignEnd="@+id/txtAhorReti" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ahorAhorroTotal"
            android:id="@+id/lblAhrTotal"
            android:layout_below="@+id/lblRetiro"
            android:layout_toLeftOf="@+id/txtAhorTotal"
            android:layout_toStartOf="@+id/txtAhorTotal"
            android:layout_marginRight="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlEncabezado"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorSaldo"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Saldo: $900.00"
            android:id="@+id/txtAhorSaldo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tabs"
        android:background="#DDDDDD">

    </android.support.v4.view.ViewPager>

</RelativeLayout>
